feat: add video inversiores

--- a/inversionista/inversionista.html
+++ b/inversionista/inversionista.html
@@ -21,11 +21,11 @@
             <nav class="hidden md:flex items-center space-x-6">
                 <a href="#inver_sec" class="hover:text-sky-200">¿Por qué invertir con
                     nosotros?</a>
-                <a href="#beneficios" class="hover:text-sky-200">Beneficios</a>
+                <a href="#testimonios" class="hover:text-sky-200">Testimonios</a>
                 <a href="#como-funciona" class="hover:text-sky-200">Proceso</a>
-                <a href="#form_inver"
+                <a href="#investor-form"
                     class="bg-sky-400 text-blue-900 px-4 py-2 font-bold rounded-full hover:bg-sky-200 transition">
-                    Cotiza Ahora
+                    ¡Invierte ahora!
                 </a>
             </nav>
 
@@ -36,7 +36,7 @@
 
     <!-- SECCIÓN HERO - VIDEO INTRODUCTIVO -->
 
-    <section class="bg-white py-20">
+    <section class="bg-sky py-20">
         <div class="container mx-auto px-6 grid md:grid-cols-2 items-center gap-12">
 
             <!-- Frase impactante -->
@@ -47,7 +47,7 @@
                 <p class="text-xl md:text-2xl text-gray-600 mb-8">
                     Únete a nuestra comunidad de inversionistas y descubre cómo transformar tus ahorros en patrimonio.
                 </p>
-                <a href="#form_inver"
+                <a href="#investor-form"
                     class=" bg-sky-400 text-blue-900 px-8 py-4 text-lg font-bold rounded-full hover:bg-sky-200 transition">
                     Comienza a invertir hoy
                 </a>
@@ -64,7 +64,6 @@
         </div>
     </section>
 
-
     <!-- PORQUE INVERTIR CON NOSOTROS -->
 
     <section id="inver_sec" class="py-16 bg-white">
@@ -76,34 +75,51 @@
                 legal especializado.
             </p>
 
-            <div class="grid md:grid-cols-3 gap-8">
-                <div class="bg-white p-6 rounded-xl shadow hover:shadow-lg transition transform hover:-translate-y-1">
-                    <h3 class="text-xl font-bold mb-3 text-blue-900">Seguridad</h3>
-                    <p class="text-gray-600">Tus inversiones están protegidas por garantías hipotecarias sólidas.</p>
+            <div class="grid md:grid-cols-2 gap-8">
+                <div
+                    class="bg-white p-8 rounded-xl shadow-md hover:shadow-lg transition transform hover:-translate-y-1">
+                    <h3 class="text-xl font-bold mb-3 text-blue-900">Alta Rentabilidad</h3>
+                    <p class="text-gray-600">
+                        Genera retornos atractivos desde el primer mes. Tus fondos trabajan mientras tú descansas.
+                    </p>
                 </div>
-                <div class="bg-white p-6 rounded-xl shadow hover:shadow-lg transition transform hover:-translate-y-1">
-                    <h3 class="text-xl font-bold mb-3 text-blue-900">Rentabilidad</h3>
-                    <p class="text-gray-600">Genera ingresos mensuales desde el primer mes.</p>
+
+                <div
+                    class="bg-white p-8 rounded-xl shadow-md hover:shadow-lg transition transform hover:-translate-y-1">
+                    <h3 class="text-xl font-bold mb-3 text-blue-900">Inversión Segura</h3>
+                    <p class="text-gray-600">
+                        Tus inversiones están respaldadas por bienes inmuebles con garantías reales.
+                    </p>
                 </div>
-                <div class="bg-white p-6 rounded-xl shadow hover:shadow-lg transition transform hover:-translate-y-1">
-                    <h3 class="text-xl font-bold mb-3 text-blue-900">Transparencia</h3>
-                    <p class="text-gray-600">Acceso a reportes periódicos y contratos claros.</p>
+
+                <div
+                    class="bg-white p-8 rounded-xl shadow-md hover:shadow-lg transition transform hover:-translate-y-1">
+                    <h3 class="text-xl font-bold mb-3 text-blue-900">Transparencia Total</h3>
+                    <p class="text-gray-600">
+                        Acceso a reportes periódicos, contratos claros y acompañamiento legal durante todo el
+                        proceso.
+                    </p>
                 </div>
-                <div class="bg-white p-6 rounded-xl shadow hover:shadow-lg transition transform hover:-translate-y-1">
-                    <h3 class="text-xl font-bold mb-3 text-blue-900">Seguridad</h3>
-                    <p class="text-gray-600">Tus inversiones están protegidas por garantías hipotecarias sólidas.</p>
+
+                <div
+                    class="bg-white p-8 rounded-xl shadow-md hover:shadow-lg transition transform hover:-translate-y-1">
+                    <h3 class="text-xl font-bold mb-3 text-blue-900">Mínimo Riesgo</h3>
+                    <p class="text-gray-600">
+                        Evaluamos cuidadosamente cada proyecto para garantizar solidez y confiabilidad.
+                    </p>
                 </div>
-                <div class="bg-white p-6 rounded-xl shadow hover:shadow-lg transition transform hover:-translate-y-1">
-                    <h3 class="text-xl font-bold mb-3 text-blue-900">Rentabilidad</h3>
-                    <p class="text-gray-600">Genera ingresos mensuales desde el primer mes.</p>
-                </div>
-                <div class="bg-white p-6 rounded-xl shadow hover:shadow-lg transition transform hover:-translate-y-1">
-                    <h3 class="text-xl font-bold mb-3 text-blue-900">Transparencia</h3>
-                    <p class="text-gray-600">Acceso a reportes periódicos y contratos claros.</p>
-                </div>
+            </div>
+
+            <div class="text-center mt-12">
+                <a href="#investor-form"
+                    class="inline-block bg-yellow-400 text-blue-900 px-6 py-3 font-bold rounded-full hover:bg-yellow-300 transition0">
+                    Quiero Invertir
+                </a>
             </div>
         </div>
     </section>
+
+    <!-- TESTIMONIOS -->
 
     <section id="testimonios" class="py-16 bg-blue-50">
         <div class="container mx-auto px-6">
@@ -158,110 +174,57 @@
         </div>
     </section>
 
-    <!-- <section class="py-16">
-        <div class="container mx-auto px-6">
-            <h2 class="text-3xl font-bold text-center mb-4 text-blue-900">
-                Invierte con Nosotros
-            </h2>
-            <p class="text-xl text-center mb-12 text-gray-600 max-w-3xl mx-auto">
-                Forma parte de un modelo de negocio sólido y rentable. Ofrecemos oportunidades de inversión
-                respaldadas
-                por garantías hipotecarias.
-            </p>
-
-            <div class="grid md:grid-cols-2 gap-8">
-                <div
-                    class="bg-white p-8 rounded-xl shadow-md hover:shadow-lg transition transform hover:-translate-y-1">
-                    <h3 class="text-xl font-bold mb-3 text-blue-900">Alta Rentabilidad</h3>
-                    <p class="text-gray-600">
-                        Genera retornos atractivos desde el primer mes. Tus fondos trabajan mientras tú descansas.
-                    </p>
-                </div>
-
-                <div
-                    class="bg-white p-8 rounded-xl shadow-md hover:shadow-lg transition transform hover:-translate-y-1">
-                    <h3 class="text-xl font-bold mb-3 text-blue-900">Inversión Segura</h3>
-                    <p class="text-gray-600">
-                        Tus inversiones están respaldadas por bienes inmuebles con garantías reales.
-                    </p>
-                </div>
-
-                <div
-                    class="bg-white p-8 rounded-xl shadow-md hover:shadow-lg transition transform hover:-translate-y-1">
-                    <h3 class="text-xl font-bold mb-3 text-blue-900">Transparencia Total</h3>
-                    <p class="text-gray-600">
-                        Acceso a reportes periódicos, contratos claros y acompañamiento legal durante todo el
-                        proceso.
-                    </p>
-                </div>
-
-                <div
-                    class="bg-white p-8 rounded-xl shadow-md hover:shadow-lg transition transform hover:-translate-y-1">
-                    <h3 class="text-xl font-bold mb-3 text-blue-900">Mínimo Riesgo</h3>
-                    <p class="text-gray-600">
-                        Evaluamos cuidadosamente cada proyecto para garantizar solidez y confiabilidad.
-                    </p>
-                </div>
-            </div>
-
-            <div class="text-center mt-12">
-                <a href="index.html#contacto"
-                    class="inline-block bg-yellow-400 text-blue-900 px-6 py-3 font-bold rounded-full hover:bg-yellow-300 transition">
-                    Quiero Invertir
-                </a>
-            </div>
-        </div>
-    </section> -->
+    <!-- CÓMO FUNCIONA -->
 
     <!-- Formulario  -->
+    <div class="bg-white py-16" id="investor-form">
+        <form action="https://formsubmit.co/velopercode@gmail.com" method="POST"
+            class=" mt-16 mb-24 p-8 rounded-xl shadow-md max-w-2xl mx-auto">
+            <h3 class="text-2xl font-bold text-blue-900 mb-6 text-center">Deja tus datos y te contactamos</h3>
 
-    <form id="investor-form" action="https://formsubmit.co/velopercode@gmail.com" method="POST"
-        class="bg-white mt-16 mb-24 p-8 rounded-xl shadow-md max-w-2xl mx-auto">
-        <h3 class="text-2xl font-bold text-blue-900 mb-6 text-center">Deja tus datos y te contactamos</h3>
+            <!-- seguridad -->
+            <input type="hidden" name="_captcha" value="false">
+            <input type="hidden" name="_next" value="https://tusitio.com/gracias.html">
+            <input type="text" name="_honey" style="display:none">
 
-        <!-- seguridad -->
-        <input type="hidden" name="_captcha" value="false">
-        <input type="hidden" name="_next" value="https://tusitio.com/gracias.html">
-        <input type="text" name="_honey" style="display:none">
+            <div class="mb-4">
+                <label class="block text-gray-700 font-semibold mb-2" for="nombre_inver">Nombre completo</label>
+                <input type="text" id="nombre_inver" name="nombre" required
+                    class="w-full border border-gray-300 rounded-lg px-4 py-2 focus:outline-none focus:ring-2 focus:ring-blue-400" />
+            </div>
 
-        <div class="mb-4">
-            <label class="block text-gray-700 font-semibold mb-2" for="nombre_inver">Nombre completo</label>
-            <input type="text" id="nombre_inver" name="nombre" required
-                class="w-full border border-gray-300 rounded-lg px-4 py-2 focus:outline-none focus:ring-2 focus:ring-blue-400" />
-        </div>
+            <div class="mb-4">
+                <label class="block text-gray-700 font-semibold mb-2" for="celular_inver">Celular o WhatsApp</label>
+                <input type="tel" id="celular_inver" name="celular" required
+                    class="w-full border border-gray-300 rounded-lg px-4 py-2 focus:outline-none focus:ring-2 focus:ring-blue-400" />
+            </div>
 
-        <div class="mb-4">
-            <label class="block text-gray-700 font-semibold mb-2" for="celular_inver">Celular o WhatsApp</label>
-            <input type="tel" id="celular_inver" name="celular" required
-                class="w-full border border-gray-300 rounded-lg px-4 py-2 focus:outline-none focus:ring-2 focus:ring-blue-400" />
-        </div>
+            <div class="mb-4">
+                <label class="block text-gray-700 font-semibold mb-2" for="monto_inver">¿Cuánto deseas invertir?</label>
+                <input type="text" id="monto_inver" name="monto" required
+                    class="w-full border border-gray-300 rounded-lg px-4 py-2 focus:outline-none focus:ring-2 focus:ring-blue-400" />
+            </div>
 
-        <div class="mb-4">
-            <label class="block text-gray-700 font-semibold mb-2" for="monto_inver">¿Cuánto deseas invertir?</label>
-            <input type="text" id="monto_inver" name="monto" required
-                class="w-full border border-gray-300 rounded-lg px-4 py-2 focus:outline-none focus:ring-2 focus:ring-blue-400" />
-        </div>
+            <div class="mb-6">
+                <label class="block text-gray-700 font-semibold mb-2" for="opcion_inver">
+                    Indícanos en qué área deseas invertir o recibir asesoría financiera
+                </label>
+                <select id="opcion_inver" name="opcion" required
+                    class="w-full border border-gray-300 rounded-lg px-4 py-2 bg-white focus:outline-none focus:ring-2 focus:ring-blue-400">
+                    <option value="" disabled selected>Selecciona una opción</option>
+                    <option value="invertir">Rendimiento con inversión segura</option>
+                    <option value="hipotecario">Crédito Hipotecario</option>
+                    <option value="vivienda">Compra de Vivienda</option>
+                    <option value="vehicular">Financiamiento Vehicular</option>
+                </select>
+            </div>
 
-        <div class="mb-6">
-            <label class="block text-gray-700 font-semibold mb-2" for="opcion_inver">
-                Indícanos en qué área deseas invertir o recibir asesoría financiera
-            </label>
-            <select id="opcion_inver" name="opcion" required
-                class="w-full border border-gray-300 rounded-lg px-4 py-2 bg-white focus:outline-none focus:ring-2 focus:ring-blue-400">
-                <option value="" disabled selected>Selecciona una opción</option>
-                <option value="invertir">Rendimiento con inversión segura</option>
-                <option value="hipotecario">Crédito Hipotecario</option>
-                <option value="vivienda">Compra de Vivienda</option>
-                <option value="vehicular">Financiamiento Vehicular</option>
-            </select>
-        </div>
-
-        <button type="submit" id="submit-investor"
-            class="w-full bg-yellow-400 text-blue-900 font-bold py-3 rounded-full hover:bg-yellow-300 transition">
-            Enviar solicitud
-        </button>
-    </form>
-
+            <button type="submit" id="submit-investor"
+                class="w-full bg-yellow-400 text-blue-900 font-bold py-3 rounded-full hover:bg-yellow-300 transition">
+                Enviar solicitud
+            </button>
+        </form>
+    </div>
     <!-- footer  -->
 
     <footer class="bg-blue-700 text-white py-12">
@@ -280,18 +243,20 @@
                     <h3 class="text-lg font-bold mb-4">Enlaces</h3>
                     <ul class="space-y-2">
                         <li><a href="" class="text-blue-200 hover:text-white">Inicio</a></li>
-                        <li><a href="#beneficios" class="text-blue-200 hover:text-white">Beneficios</a></li>
-                        <li><a href="#como-funciona" class="text-blue-200 hover:text-white">Cómo Funciona</a></li>
-                        <li><a href="#contacto" class="text-blue-200 hover:text-white">Contáctanos</a></li>
+                        <li><a href="#inver_sec" class="text-blue-200 hover:text-white">¿Por qué invertir con
+                                nosotros?</a></li>
+                        <li><a href="#testimonio" class="text-blue-200 hover:text-white">Testimonios</a></li>
+                        <li><a href="#proceso" class="text-blue-200 hover:text-white">Proceso</a></li>
                     </ul>
                 </div>
 
                 <div>
                     <h3 class="text-lg font-bold mb-4">Legal</h3>
                     <ul class="space-y-2">
-                        <li><a href="#" class="text-blue-200 hover:text-white">Aviso de Privacidad</a></li>
-                        <li><a href="#" class="text-blue-200 hover:text-white">Términos y Condiciones</a></li>
-                        <li><a href="#" class="text-blue-200 hover:text-white">Contratos</a></li>
+                        <li><a href="../politica-de-privacidad.html" class="text-blue-200 hover:text-white">Aviso de
+                                Privacidad</a></li>
+                        <!-- <li><a href="#" class="text-blue-200 hover:text-white">Términos y Condiciones</a></li> -->
+                        <!-- <li><a href="#" class="text-blue-200 hover:text-white">Contratos</a></li> -->
                     </ul>
                 </div>
 
